--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,7 @@
+<div class="badge">
+  <img src="assets/images/logo_ict_white.svg" />
+</div>
+
 <div class="site-wrap">
   <div class="site-mobile-menu">
     <div class="site-mobile-menu-header">
@@ -37,13 +41,10 @@
               <li>
                 <a routerLink="/developers">Developers</a>
               </li>
-              <li><a routerLink="/podcasts">Podcasts</a></li>
+              <li><a routerLink="/podcasts">Interviews</a></li>
 
-              <li><a href="#">Blog</a></li>
-
-              <li>
-                <a href="https://www.ict-group.it" target="_blank">Sponsor</a>
-              </li>
+              <li><a routerLink="/blog">Blog</a></li>
+              <li><a routerLink="/about">About</a></li>
 
               <li>
                 <a
