--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -43,12 +43,7 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-8 offset-lg-2">
-        <p-table
-          [value]="podcasts"
-          [rows]="10"
-          [showCurrentPageReport]="true"
-          [paginator]="true"
-        >
+        <p-table [value]="podcasts" [rows]="10" [paginator]="true">
           <ng-template pTemplate="body" let-podcasts>
             <tr>
               <td>
