--- a/src/assets/less/style.less
+++ b/src/assets/less/style.less
@@ -294,21 +294,24 @@ a:hover {
 }
 
 .badge {
-  height: 40px;
-  background: #fff;
-  width: 40px;
+  height: 36px;
+  background: #efefef;
+  width: 140px;
   text-align: center;
   font-family: sans-serif;
   color: #fff;
   position: fixed;
-  bottom: 80px;
-  right: 0px;
-  border-radius: 6px 0px 0px 6px;
+  top: 200px;
+  right: -50px;
+  border-radius: 6px 6px 0px 0px;
   padding: 0px;
+  line-height: 40px;
+
+  transform: rotate(-90deg); /* Equal to rotateZ(45deg) */
 }
 
 .badge img {
-  height: 40px;
+  height: 15px;
   position: relative;
   right: 0px;
   filter: none;
