--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,7 @@
 <div class="badge">
-  <img src="assets/images/logo_ict_white.svg" />
+  <a href="https://www.ict-group.it" target="_blank"
+    ><img src="assets/images/logo_ict_white.svg"
+  /></a>
 </div>
 
 <div class="site-wrap">
