--- a/src/assets/less/style.less
+++ b/src/assets/less/style.less
@@ -302,6 +302,7 @@ a:hover {
   color: #fff;
   position: fixed;
   top: 200px;
+  z-index: 100;
   right: -50px;
   border-radius: 6px 6px 0px 0px;
   padding: 0px;
