--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div class="badge">
-  <a href="https://www.ict-group.it" target="_blank"
-    ><img src="assets/images/logo_ict_white.svg"
-  /></a>
+  <a href="https://www.ict-group.it" target="_blank">
+    <img src="assets/images/logo_ict_white.svg"/>
+  </a>
 </div>
 
 <div class="site-wrap">
@@ -20,40 +20,31 @@
         <div class="col-3">
           <div class="site-logo">
             <a routerLink="/" class="h4"
-              ><img src="assets/images/logo.svg" />
+            ><img src="assets/images/logo.svg"/>
             </a>
           </div>
         </div>
         <div class="col-9">
           <nav
             class="site-navigation position-relative text-right text-md-right"
-            role="navigation"
-          >
+            role="navigation">
             <div class="d-block d-lg-none ml-md-0 mr-auto">
-              <a href="#" class="site-menu-toggle js-menu-toggle text-black"
-                ><span class="icon-menu h3"></span
-              ></a>
+              <a href="#" class="site-menu-toggle js-menu-toggle text-black"><span class="icon-menu h3"></span></a>
             </div>
-
             <ul class="site-menu js-clone-nav d-none d-lg-block">
               <li class="active">
                 <a routerLink="/">Home</a>
               </li>
-
               <li>
                 <a routerLink="/developers">Developers</a>
               </li>
-              <li><a routerLink="/podcasts">Interviews</a></li>
-
+              <li><a routerLink="/interviews">Interviews</a></li>
               <li><a routerLink="/blog">Blog</a></li>
               <li><a routerLink="/about">About</a></li>
-
               <li>
-                <a
-                  href="https://github.com/ict-group/it-dev-site"
-                  target="_blank"
-                  ><span class="icon-github icon-font"></span> Github</a
-                >
+                <a href="https://github.com/ict-group?q=it-dev&type=&language=" target="_blank">
+                  <span class="icon-github icon-font"></span> Github
+                </a>
               </li>
             </ul>
           </nav>
@@ -68,7 +59,9 @@
     <div class="container">
       <div class="row pt-5 mt-0 text-center">
         <div class="col-md-12">
-          <p>All rights reserved</p>
+          <p><a href="https://www.ict-group.it" target="_blank">ICT-GROUP S.r.l.</a>- Capitale sociale 300.000 € i.v. -
+            P.IVA. 02493530352 - REA RE-286444 - mail pec:
+            ict-groupsrl@pec.it</p>
         </div>
       </div>
     </div>
