--- a/src/app/blog/blog.component.html
+++ b/src/app/blog/blog.component.html
@@ -22,7 +22,7 @@
                     class="img-author"
                   />
                   <h3 class="font-weight-light">
-                    <a [routerLink]="['/blog-detail', blog.id]"
+                    <a [routerLink]="['/blog', blog.id]"
                       >Mario Rossi: Lavorare in Microsoft</a
                     >
                   </h3>
