--- a/src/app/developers/developers.component.html
+++ b/src/app/developers/developers.component.html
@@ -14,7 +14,7 @@
             >
               <div class="item">
                 <a
-                  [routerLink]="['/developer-detail', item.id]"
+                  [routerLink]="['/developers', item.id]"
                   class="d-flex align-items-center"
                 >
                   <img
