--- a/src/app/interviews/interviews.component.html
+++ b/src/app/interviews/interviews.component.html
@@ -2,13 +2,13 @@
   <div class="row align-items-center">
     <div class="col-lg-12">
       <h1 class="mb-6 display-3 text-center">
-        Podcasts
+        Interviews
       </h1>
     </div>
 
     <div class="col-lg-8 offset-lg-2">
-      <p-table [value]="podcasts" [rows]="10" [paginator]="true">
-        <ng-template pTemplate="body" let-podcasts>
+      <p-table [value]="interviews" [rows]="10" [paginator]="true">
+        <ng-template pTemplate="body" let-interview>
           <tr>
             <td>
               <div
@@ -22,7 +22,7 @@
                     class="img-author"
                   />
                   <h3 class="font-weight-light">
-                    <a [routerLink]="['/podcast-detail', podcasts.id]"
+                    <a [routerLink]="['/interviews', interview.id]"
                       >Mario Rossi: Lavorare in Microsoft</a
                     >
                   </h3>
