--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,29 +2,23 @@
   <div class="row align-items-center text-center">
     <div class="col-lg-12">
       <h1 class="mb-6 display-3">
-        Italiani nei migliori team informatici nel mondo
+        Italians Do It Better
       </h1>
 
       <div class="col-lg-8 offset-lg-2 col-10 offset-1">
         <div class="featured-user mb-5 mb-lg-0">
           <div class="row">
             <div
-              *ngFor="
-                let item of myObservableArray | async | slice: 0:6;
-                let i = index
-              "
-              class="col-12 col-lg-4 col-md-4 col-sm-6 col-xs-12"
-            >
+              *ngFor="let item of myObservableArray | async | slice: 0:6;let i = index"
+              class="col-12 col-lg-4 col-md-4 col-sm-6 col-xs-12">
               <div class="item">
                 <a
-                  [routerLink]="['/developer-detail', item.id]"
-                  class="d-flex align-items-center"
-                >
+                  [routerLink]="['/developers', item.id]"
+                  class="d-flex align-items-center">
                   <img
                     src="assets/images/person_{{ item.id }}.jpg"
                     alt="Image"
-                    class="img-fluid mr-2"
-                  />
+                    class="img-fluid mr-2"/>
                   <div class="podcaster">
                     <span class="d-block">{{ item.value }}</span>
                     <span class="small">Microsoft</span>
@@ -43,32 +37,26 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-8 offset-lg-2">
-        <p-table [value]="podcasts" [rows]="10" [paginator]="true">
-          <ng-template pTemplate="body" let-podcasts>
+        <p-table [value]="interviews" [rows]="10" [paginator]="true">
+          <ng-template pTemplate="body" let-interview>
             <tr>
               <td>
                 <div
                   class="d-block d-md-flex podcast-entry bg-white mb-5"
-                  data-aos="fade-up"
-                >
+                  data-aos="fade-up">
                   <div class="text">
                     <img
                       src="assets/images/person_1.jpg"
                       alt="Image"
-                      class="img-author"
-                    />
+                      class="img-author"/>
                     <h3 class="font-weight-light">
-                      <a [routerLink]="['/podcast-detail', podcasts.id]"
-                        >Mario Rossi: Lavorare in Microsoft</a
-                      >
+                      <a [routerLink]="['/interviews', interview.id]">Mario Rossi: Lavorare in Microsoft</a>
                     </h3>
                     <div class="text-white mb-3">
-                      <span class="text-black-opacity-05"
-                        ><small
-                          >By Mike Smith <span class="sep">/</span> 16 September
-                          2017 <span class="sep">/</span> 1:30:20</small
-                        ></span
-                      >
+                      <span class="text-black-opacity-05">
+                        <small>By Mike Smith <span class="sep">/</span> 16 September
+                          2017 <span class="sep">/</span> 1:30:20</small>
+                      </span>
                     </div>
                   </div>
                 </div>
